# oxidize-pdf-integrations

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md
.claude-plugin/: marketplace.json
.github/workflows/: publish-mcp.yml  release-langchain.yml  release-llamaindex.yml  test-langchain.yml  test-llamaindex.yml
claude-code/: .mcp.json
claude-code/.claude-plugin/: plugin.json
claude-code/agents/: pdf-specialist.md
claude-code/hooks/: hooks.json
claude-code/skills/analyze-pdf/: SKILL.md
claude-code/skills/create-pdf/: SKILL.md
claude-code/skills/extract-text/: SKILL.md
claude-code/skills/manipulate-pdf/: SKILL.md
claude-code/skills/read-pdf/: SKILL.md
claude-code/skills/secure-pdf/: SKILL.md
haystack/tests/: conftest.py  test_converter.py  test_converter_bytes.py  test_converter_disjoint.py
langchain/: README.md  pyproject.toml
langchain/langchain_oxidize_pdf/: __init__.py  base.py
langchain/tests/: conftest.py  test_loader.py  test_loader_disjoint.py  test_loader_lazy.py
llamaindex/: README.md  pyproject.toml
llamaindex/llama_index/readers/oxidize_pdf/: __init__.py  base.py
llamaindex/tests/: conftest.py  test_reader.py  test_reader_disjoint.py
mcp/: README.md  server.json
