[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-index-readers-oxidize-pdf"
version = "0.1.1"
description = "LlamaIndex reader for oxidize-pdf — fast, Rust-powered PDF parsing with element-disjoint RAG chunking"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = [
    { name = "Santiago Fernández Muñoz" },
]
keywords = ["llamaindex", "llama-index", "reader", "pdf", "rag", "oxidize-pdf", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "llama-index-core>=0.13.0,<0.15",
    # 0.4.3 ships oxidize-pdf-core 2.5.5, which fixes the HybridChunker
    # overlap branch that made `rag_chunks()` emit accumulating
    # (non-disjoint) chunks. 0.1.1 of this reader requires the fix —
    # any 0.4.x ≥ 0.4.3 is acceptable.
    "oxidize-pdf>=0.4.3",
]

[project.urls]
Homepage = "https://github.com/bzsanti/oxidize-pdf-integrations"
Repository = "https://github.com/bzsanti/oxidize-pdf-integrations"
Issues = "https://github.com/bzsanti/oxidize-pdf-integrations/issues"

[tool.hatch.build.targets.sdist]
include = ["llama_index/"]

[tool.hatch.build.targets.wheel]
include = ["llama_index/"]

[tool.llamahub]
contains_example = false
import_path = "llama_index.readers.oxidize_pdf"

[tool.llamahub.class_authors]
OxidizePdfReader = "bzsanti"
